Add files via upload
maxstack, maxlocals
StackMap class